--- a/.github/workflows/packer.yml
+++ b/.github/workflows/packer.yml
@@ -22,6 +22,12 @@ jobs:
           arguments: -syntax-only
           target: docker-buffalo.pkr.hcl
 
+      # Init
+      - name: Validate Template
+        uses: hashicorp/packer-github-actions@master
+        with:
+          command: init
+          
       # build artifact
       - name: Build Artifact
         uses: hashicorp/packer-github-actions@master
