--- a/.github/workflows/packer.yml
+++ b/.github/workflows/packer.yml
@@ -16,36 +16,15 @@ jobs:
 
       # validate templates
       - name: Validate Template
-        uses: hashicorp/packer-github-actions@master
-        with:
-          command: validate
-          arguments: -syntax-only
-          target: docker-buffalo.pkr.hcl
+        run: packer validate docker-buffalo.pkr.hcl
 
       # Init
       - name: init packer
-        uses: hashicorp/packer-github-actions@master
-        with:
-          command: init
-      # Install docker
-      - name: Install docker
-        run: |
-          sudo apt-get install ca-certificates curl gnupg lsb-release
-          sudo mkdir -p /etc/apt/keyrings
-          curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo gpg --dearmor -o /etc/apt/keyrings/docker.gpg
-          echo \
-            "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/ubuntu \
-            $(lsb_release -cs) stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
-          sudo apt-get update && sudo apt-get install docker -y
-          
-          
+        run: packer init
+
       # build artifact
       - name: Build Artifact
-        uses: hashicorp/packer-github-actions@master
-        with:
-          command: build
-          arguments: "-color=false -on-error=abort"
-          target: docker-buffalo.pkr.hcl
+        run: packer build -color=false -on-error=abort docker-buffalo.pkr.hcl
         env:
           PACKER_LOG: 1
 
