--- a/.github/workflows/packer-build-tag.yml
+++ b/.github/workflows/packer-build-tag.yml
@@ -4,8 +4,10 @@ name: Packer - build and tag
 
 on:
   push:
+    branches:
+      - "!main"
     tags:
-      - "!*"
+      - "!**"
 
 jobs:
   packer_build_and_tag:
