--- a/.github/workflows/packer-build-tag.yml
+++ b/.github/workflows/packer-build-tag.yml
@@ -3,6 +3,9 @@
 name: Packer - build and tag
 
 on:
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
+  
   push:
     branches-ignore:
       - 'main'
