--- a/.github/workflows/packer-build-tag-push.yml
+++ b/.github/workflows/packer-build-tag-push.yml
@@ -3,6 +3,9 @@
 name: Packer - build, tag, push
 
 on:
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
+
   push:
     tags:
       - v*
