--- a/.github/workflows/packer-build-tag-push.yml
+++ b/.github/workflows/packer-build-tag-push.yml
@@ -43,7 +43,7 @@ jobs:
             --username ${{ secrets.MY_DOCKER_LOGIN }} \
             --password-stdin
 
-          docker push "deogracia/my-buffalo-docker:${VERSION}"
+          docker push "deogracia/my-buffalo:${VERSION}"
 
           docker logout
         env:
